Bug 1310454 part 1 - Log more info when TSFTextStore gets InputContext and InputScopes r=m_kato

MozReview-Commit-ID: GrF0IGLUPtA

--HG--
extra : rebase_source : 888616f60be060f8267cd8a1006ffec79f6bc02d